--- a/views/places/add.jade
+++ b/views/places/add.jade
@@ -3,10 +3,11 @@ extends ../layout
 block append content
     div.col-md-4
     div.col-md-4
-        form(method='post')
+        form(method='post', enctype="multipart/form-data")
             input(type='text', name='name', class='form-control', placeholder='Name')
             input(type='text', name='description', class='form-control', placeholder='Description')
             input(type='text', name='longitude', class='form-control', placeholder='Longitude')
             input(type='text', name='latitude', class='form-control', placeholder='Latitude')
+            input(type="file", name="photos", class='form-control')
             input(type='submit', class='btn btn-default')
     div.col-md-4
