--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,43 +3,56 @@ html
   head
     title= title
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css', integrity='sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js',integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",   crossorigin='anonymous')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
     link(rel='stylesheet', href='/stylesheets/style.css')
+      block css
   body
-    block content
-        nav.navbar.navbar-default
-            .container-fluid
-                // Brand and toggle get grouped for better mobile display
-                .navbar-header
-                    button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
-                        span.sr-only Toggle navigation
-                        span.icon-bar
-                        span.icon-bar
-                        span.icon-bar
-                    a.navbar-brand(href='/') ViajaConmigo
-                if(!login)
-                    #bs-example-navbar-collapse-1.collapse.navbar-collapse
-                        ul.nav.navbar-nav.navbar-right
-                            li
-                                a(href='/users/login') Login
-                            li
-                                a(href='/users/register') Register
-                                    // /.navbar-collapse
-                else
-                    #bs-example-navbar-collapse-1.collapse.navbar-collapse
-                        ul.nav.navbar-nav.navbar-right
-                            li.dropdown
-                                a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
-                                    | Places
-                                    span.caret
-                                ul.dropdown-menu
-                                    li
-                                        a(href='/places') List
-                                        a(href='/places/add') Add new
-                            li
-                                a(href='/users/logout') Logout
-        if(message)
-            .alert.alert-info message
-            // /.container-fluid
+      #bmenu.navbar.navbar-default(role='navigation')
+          .container-fluid
+              .navbar-header
+                  a.navbar-brand(href='/') ViajaConmigo
+                  button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-menubuilder')
+                      span.sr-only Toggle navigation
+                      span.icon-bar
+                      span.icon-bar
+                      span.icon-bar
+              if(!login)
+                  .collapse.navbar-collapse.navbar-menubuilder
+                      ul.nav.navbar-nav.navbar-right
+                          li
+                              a(href='/users/login') Login
+                          li
+                              a(href='/users/register') Register
+                                  // /.navbar-collapse
+              else
+                  .collapse.navbar-collapse.navbar-menubuilder
+                      ul.nav.navbar-nav.navbar-right
+                          li.dropdown
+                              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
+                                  | Places
+                                  span.caret
+                              ul.dropdown-menu
+                                  li
+                                      a(href='/places') List
+                                      a(href='/places/add') Add new
+                          li
+                              a(href='/users/logout') Logout
+
+      block before_content
+
+      #content.container
+          if(message)
+              .alert.alert-info message
+          block content
+
+
+
+      footer.col-xs-12.container
+          .col-md-4
+              p Copyright &copy; by Jozef Curyllo
+          .col-md-4
+          .col-md-4
+
+
+      block javascript
