--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,8 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js',integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",   crossorigin='anonymous')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
     link(rel='stylesheet', href='/stylesheets/style.css')
+      link(rel='stylesheet', href='/public/font-awesome/css/font-awesome.min.css')
+      link(href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC', rel='stylesheet')
       block css
   body
       #bmenu.navbar.navbar-default(role='navigation')
@@ -42,17 +44,48 @@ html
       block before_content
 
       #content.container
-          if(message)
-              .alert.alert-info message
+          if(message && message.length > 0 && success)
+              br
+              .alert.alert-success= message
+          if(message && message.length > 0 && !success)
+              br
+              .alert.alert-danger= message
           block content
 
-
+      block after_content
 
       footer.col-xs-12.container
           .col-md-4
-              p Copyright &copy; by Jozef Curyllo
-          .col-md-4
-          .col-md-4
+              h2 See also
+              ul
+                  li
+                      a(href='#') One document
+                  li
+                      a(href='#') Second document
+                  li
+                      a(href='#') One document
+                  li
+                      a(href='#') Second document
 
+          .col-md-4
+              h2 See also
+              ul
+                  li
+                      a(href='#') One document
+                  li
+                      a(href='#') Second document
+                  li
+                      a(href='#') One document
+                  li
+                      a(href='#') Second document
+          .col-md-4
+              h2 Contact
+              p(style='white-space:pre;')
+                  | Awesome company
+                  | New York
+                  | 21st Avenue 4
+                  | 0048 555 555 333
+          .col-md-12
+              p.small.pull-right Copyright &copy; 2016 by Awesome Company
 
       block javascript
