--- a/views/users/register.jade
+++ b/views/users/register.jade
@@ -9,17 +9,9 @@ block append content
             .panel-body
                 form.form-horizontal(role='form', method='POST')
                     .form-group
-                        label.col-md-4.control-label(for='firstname') Firstname
+                        label.col-md-4.control-label(for='name') Name
                         .col-md-6
-                            input(type='text', name='firstname',id='firstname' class='form-control', placeholder='First name')
-                    .form-group
-                        label.col-md-4.control-label(for='lastname') Lastname
-                        .col-md-6
-                            input(type='text', name='lastname',id='lastname' class='form-control', placeholder='First name')
-                    .form-group
-                        label.col-md-4.control-label(for='city') City
-                        .col-md-6
-                            input(type='text', name='city',id='city' class='form-control', placeholder='City')
+                            input(type='text', name='name',id='name' class='form-control', placeholder='Name')
                     .form-group
                         label.col-md-4.control-label(for='email') Email
                         .col-md-6
