--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,7 +36,7 @@ html
                                     span.caret
                                 ul.dropdown-menu
                                     li
-                                        a(href='/places') List
+                                        a(href='/places/list') List
                                         a(href='/places/add') Add new
                             li
                                 a(href='/users/logout') Logout
@@ -44,12 +44,26 @@ html
         block before_content
 
         #content.container
-            if(message && message.length > 0 && success)
+            if(success_messages && success_messages.length > 0)
                 br
-                .alert.alert-success= message
-            if(message && message.length > 0 && !success)
+                .alert.alert-success= success_messages
+            if(error_messages && error_messages.length > 0)
                 br
-                .alert.alert-danger= message
+                .alert.alert-danger= error_messages
+            block breadcrumb
+                br
+                ol.breadcrumb
+                    - for(var i =0; i<breadcrumb.length; ++i){
+                    - if(breadcrumb[i].url)
+                    li(itemscope='', itemtype='http://data-vocabulary.org/Breadcrumb')
+                        a(href='#{breadcrumb[i].url}', itemprop='url')
+                    span(itemprop='title') #{breadcrumb[i].label}
+                    - else
+                        li
+                            span #{breadcrumb[i].label}
+                    - }
+
+
             block content
 
         block after_content
@@ -89,3 +103,6 @@ html
                 p.small.pull-right Copyright &copy; 2016 by Awesome Company
 
         block javascript
+            script(src='/public/javascripts/scripts.js')
+            script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment-with-locales.min.js', integrity='sha256-vvT7Ok9u6GbfnBPXnbM6FVDEO8E1kTdgHOFZOAXrktA=', crossorigin='anonymous')
+
