--- a/views/places/index.jade
+++ b/views/places/index.jade
@@ -8,8 +8,11 @@ block append before_content
             for place in places
                 for image in place.images
                     .sp-slide
-                        img.sp-image(src='/uploads/#{image.filename}')
+                        img.sp-image(src='/public/slider-pro/dist/css/images/blank.gif',data-src='/uploads/#{image.filename}')
                         p.sp-layer.sp-black.sp-padding(data-width='100%',data-position='bottomLeft')= place.name
+
+
+block breadcrumb
 
 block append content
     h1.page-header Find interesting place to see!
@@ -20,16 +23,13 @@ block append content
 
         p.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis sem ullamcorper, sollicitudin neque vitae, accumsan est. Nam venenatis velit ipsum, sed fringilla lectus ultricies a. Etiam tincidunt cursus purus posuere facilisis. Aenean tincidunt gravida urna eu tempor. Nulla facilisi. Integer laoreet dolor et augue iaculis ultrices. Curabitur sed ex nec tortor tempus lacinia. Donec auctor a justo fringilla sollicitudin. Donec condimentum metus purus, vel aliquet nulla egestas eu. Vestibulum ac commodo dolor. Vestibulum a arcu purus. Morbi fringilla, mi vel cursus commodo, ex felis vestibulum mi, vitae feugiat magna nisi sit amet nisi. In sem dui, consectetur et pellentesque non, volutpat vitae mi.
 
-    .col-md-6
-        blockquote(cite='Mary Anne Radmacher')
-            p I am not the same, having seen the moon shine on the other side of the world.
-            p.pull-right Mary Anne Radmacher
-        blockquote(cite='Mary Anne Radmacher')
-            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis sem ullamcorper, sollicitudin neque vitae, accumsan est. Nam venenatis velit ipsum, sed fringilla lectus ultricies a.
-            p.pull-right Julius Ceasar
-        blockquote(cite='Mary Anne Radmacher')
-            p I am not the same, having seen the moon shine on the other side of the world.
-            p.pull-right Mary Anne Radmacher
+    .col-md-6.masonry
+        for place in places
+            for image in place.images
+                a.masonry-item(href='/places/show/' + place._id, title='#{place.name}')
+                    img(src='/uploads/#{image.filename}')
+
+
 block append after_content
     hr
     .container
